feat(Problem5): solution 메소드 구현